fixato la visualizzazione delle prenotazioni e fixato il modifica data proiezione